fix the callout styling. Primarily make the font smaller and add a little bit of letters spacing to make it more legible.

--- a/components/convoscope/useCase.module.css
+++ b/components/convoscope/useCase.module.css
@@ -120,10 +120,10 @@
 .cardCallout {
     color: var(--subheading-light-text, #A7B1CF);
     font-family: MuseoModerno;
-    font-size: 2.25rem;
-    font-style: normal;
-    font-weight: 600;
+    font-size: var(--pull-quote-txt);
+    font-weight: 500;
     line-height: normal;
+    letter-spacing: 0.02rem;
     width: var(--innerTxtWidth, 54.125rem);
 }
 
@@ -208,5 +208,8 @@
         margin: var(--margin-2)
     }
 
+    .cardCallout {
+
+    }
 
   }
